--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,1 @@
-
-
-<section class="home container-fluid">
-    <form>
-        <p class="prompt">What would you like to learn?</p>
-        <input type="text" placeholder="Topic">
-        <button class="primary" type="button">Search</button>
-    </form>
-</section>
+<router-outlet></router-outlet>
