Connected backend and frontend. Retrieved data from API for display.

--- a/frontend/src/app/module/module.component.html
+++ b/frontend/src/app/module/module.component.html
@@ -1,2 +1,22 @@
-<p>module works!</p>
-<p>Topic is {{ topic }}</p>
+
+
+<div class="text-center">
+    <h1>Learning Path: {{ topic }}</h1>
+</div>
+
+<ul *ngFor="let topic of content">
+    <li><h4>{{topic.name}}</h4></li>
+    <p>{{topic.description}}</p>
+</ul>
+
+<!-- <div class="container">
+    <div class="text-center">
+        <h2 class="section-heading text-uppercase">Youtube Videos</h2><br>
+    </div>
+    <div class="card text-center video" style="width: 18rem;">
+        <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/184.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
+</div> -->
