--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -62,6 +62,7 @@
     left: -130px;
     background: radial-gradient(#44006b, #ad1fff);
     overflow: hidden;
+    animation: expandCircle1 8s linear infinite;
   }
 
   #radius-shape-2 {
@@ -72,11 +73,47 @@
     height: 300px;
     background: radial-gradient(#44006b, #ad1fff);
     overflow: hidden;
+    animation: expandCircle2 4s linear infinite;
   }
 
   .bg-glass {
     background-color: hsla(0, 0%, 100%, 0.9) !important;
     backdrop-filter: saturate(200%) blur(25px);
+  }
+
+  @keyframes expandCircle2 {
+    0% {
+      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+      width: 300px;
+      height: 300px;
+    }
+    50% {
+      border-radius: 58% 37% 80% 68% / 50% 66% 37% 80%;
+      height: 220px;
+      width: 220px;
+    }
+    100% {
+      border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+      width: 300px;
+      height: 300px;
+    }
+    
+  }
+
+  @keyframes expandCircle1 {
+    0% {
+      width: 150px;
+      height: 150px;
+    }
+    50% {
+      width: 220px;
+      height: 220px;
+    }
+    100% {
+      width: 150px;
+      height: 150px;
+    }
+    
   }
 
   
